[package]
name = "bevyquad"
version = "0.4.13"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/not-fl3/bevyquad"
repository = "https://github.com/not-fl3/bevyquad"
description = """
Simple and easy to use graphics library
"""
readme="README.md"
license = "MIT OR Apache-2.0"

[features]
audio = ["quad-snd"]
log-rs = ["log"]
glam-serde = ["glam/serde"]
default = []

[package.metadata.android]
assets = "examples/"

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { version = "=0.4.7", features = ["log-impl"] }
quad-rand = "0.2.3"
glam = { version = "0.27", features = ["scalar-math"] }
image = { version = "0.24", default-features = false, features = ["png", "tga"] }
bevyquad_macro = { version = "0.1.8", path = "bevyquad_macro" }
fontdue = "0.7"
backtrace = { version = "0.3.60", optional = true, default-features = false, features = [ "std", "libbacktrace" ] }
log = { version = "0.4", optional = true }
quad-snd = { version = "0.2", optional = true }
slotmap = "1.0"
bevy_ecs = "0.15.1"

[dev-dependencies]
bevyquad-particles = { path = "./particles" }
bevyquad-tiled = { path = "./tiled" }
bevyquad-profiler = { path = "./profiler" }
bevyquad-platformer = { path = "./physics-platformer" }

# workaround to fix the examples
# this allows to use bevyquad-particles in examples without two versions of bevyquad
[patch.crates-io]
bevyquad = { path = './' }

#quad-snd = {path = '../quad-snd'}
#miniquad = { path = '../miniquad' }
#miniquad = { git = "https://github.com/not-fl3/miniquad", branch = "msaa_render_texture" }
#quad-gl = {path = './quad-gl'}

